--- a/RemisYa/src/app/app.component.html
+++ b/RemisYa/src/app/app.component.html
@@ -1,8 +1,6 @@
 <app-navbar></app-navbar>
-<app-header></app-header>
-<app-sobrenosotros></app-sobrenosotros>
-<app-tienda></app-tienda>
-<app-registrarse></app-registrarse>
-<app-iniciarsesion></app-iniciarsesion>
-<app-contacto></app-contacto>
+
+<router-outlet></router-outlet>
+
+
 <app-footer></app-footer>
