--- a/RemisYa/src/app/layout/header/header.component.html
+++ b/RemisYa/src/app/layout/header/header.component.html
@@ -50,7 +50,7 @@
                           </div>
                     </div>
                    <div class="mt-5"  width=100% height=100%>
-                    <a href="#iniciars">
+                    <a [routerLink]="'/LogIn'">
                         <button type="button" class="btn btn-primary">Soliciar movil <i
                           class="bi bi-arrow-right-circle"></i></button>
                     </a>
