--- a/RemisYa/src/app/pages/tienda/tienda.component.html
+++ b/RemisYa/src/app/pages/tienda/tienda.component.html
@@ -71,7 +71,7 @@
                         </div>
                     </div>
                     <div class="mt-5"  width=100% height=100%>
-                        <a href="#iniciars">
+                        <a [routerLink]="'/LogIn'">
                             <button type="button" class="btn btn-primary">Comprar ahora</button>
                         </a>
                     </div>       
@@ -81,3 +81,4 @@
         </div>
         <hr>
     </div>
+    
