--- a/RemisYa/src/app/layout/navbar/navbar.component.html
+++ b/RemisYa/src/app/layout/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 
-<nav class="navbar navbar-expand-lg fixed-top">
+<div class="navbar navbar-expand-lg fixed-top">
   <div class="container">
     <img src="../../../assets/logoremis.png" class="user user-chip-xxlg bg-default"
     alt="user-image"  width="25" height="25">
-     <a color= "#000" class="navbar-brand text-white fs-3" [routerLink]="'/home'">--> Remis Ya!</a>
+     <a class="navbar-brand text-white fs-3" [routerLink]="'/home'">--> Remis Ya!</a>
      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <i class="bi bi-list"></i>
     </button>
@@ -16,8 +16,11 @@
               <a class="nav-link" [routerLink]="'/Sobrenosotros'">Sobre Nosotros</a>
            </li>
            <li class="nav-item">
-              <a class="nav-link" [routerLink]="'/tienda'">Tienda</a>
+              <a *ngIf="!login.isLoggedIn()" class="nav-link" [routerLink]="'/tienda'">Tienda de abonos</a>
            </li>
+           <li class="nav-item">
+            <a *ngIf="login.isLoggedIn()" class="nav-link" [routerLink]="'/tiendalog'">Tienda de abonos</a>
+            </li>
            <li class="nav-item">
               <a *ngIf="!login.isLoggedIn()" class="nav-link" [routerLink]="'/registrarse'">Registrarse</a>
            </li>
@@ -28,17 +31,17 @@
             <a class="nav-link" [routerLink]="'/contact-us'">Contacto</a>
          </li>
 
-        <li class="nav-item">
-          <button type="button" class="btn" *ngIf="login.isLoggedIn()" routerLink="/admin">
+        <li id="dash" class="nav-item">
+          <button type="button" class="btn" *ngIf="login.isLoggedIn()" routerLink="/user-dashboard">
             {{ login.getUser().username }}
           </button>
         </li>
 
-        <li class="nav-item">
+ <!--       <li class="nav-item">
           <a class="nav-link" *ngIf="login.isLoggedIn()"> </a>
-        </li>
+        </li>-->
 
-        <li class="nav-item">
+        <li id="dash" class="nav-item">
           <button type="button" class="btn btn-light" *ngIf="login.isLoggedIn()" (click)="logOut()">Cerrar sesion</button>
         </li>
       </ul>
