--- a/RemisYa/src/app/pages/user/user-dashboard/user-dashboard.component.html
+++ b/RemisYa/src/app/pages/user/user-dashboard/user-dashboard.component.html
@@ -1,12 +1,12 @@
-<div class="container">
+<!--<header>
+<div id="dash" class="container">
     <div class="row">
        <div class="col-md-5 text-white mt-4 ms-md-5 text-center-xs" style="z-index: 1;">
-          <h1 class="fw-normal">Remis Ya!</h1>
-          <p>La solución a sus problemas de transporte.</p>
+        <h2>Bienvenido al sistema {{ login.getUser().username }}</h2>
+        <h1 class="fw-normal">Gracias por ingresar!</h1>
+          <p>Encontraste la solución a tus problemas de transporte.</p>
           <br>
-          <p>Es una herramienta para viajar mucho más simple y sin esperas. Además contamos con servicios de cadetería y viajes dentro de la ciudad, viajes fuera del ejido municipal, transporte escolar y abonos mensuales para tu comodidad.</p>
-<!--          <a class="btn btn-lg btn-primary" href="RemisYa">Soliciar movil <i
-              class="bi bi-arrow-right-circle"></i></a> -->
+          <p>Que tengas un buen viaje.</p>
        </div>
        <div class="col ms-md-5 mt-3 mt-md-0 text-center-xs" style="z-index: 1;">
           <img width="100%" height="100%" class="img-fluid"  src="./assets/autos.jpg">
@@ -53,15 +53,10 @@
                        <button type="button" class="btn btn-primary">Soliciar movil <i
                          class="bi bi-arrow-right-circle"></i></button>
                    </a>
-                  </div>   
-                  <!-- <a class="btn btn-lg btn-primary" href="RemisYa">Soliciar movil <i
-                     class="bi bi-arrow-right-circle"></i></a>
-                   <mat-hint>Movil solcitado pero con demoras, registrese para solicitar un movil sin demoras</mat-hint>
-                  --> <br>
-                   <p>-</p>
-                 <!--  <button onclick="alertar('Su coche ya está en camino');">
-                       Pedir coche
-                     </button>   -->
+                </div>   
+              <br>
+                <p>-</p>
+
                      <script type="text/javascript">
                          function alertar(texto) {
                             alert(texto);
@@ -75,88 +70,52 @@
          </div>
     </div>
  </div>
-<!---->
+</header>
+-->
 
-<div id="tiendada" class="container py-5">
-    <div class="row mt-5">
-        <div class="bg-app">
-            <div class="container py-5">
-                <div class="row">
-                    <div class="col-12 mt-4 text-center">
-                        <h2 class="fw-bold">Tienda de Remis Ya!</h2>
-                        <p class="text-lg">En nuestra tienda tiene la posibilidad de adquirir el abono mensual que más se adapte a su necesidad y bolsillo.</p>
-                    </div>
-                </div>        
-                <div class="row mt-4">
-                    <div class="col-12 col-sm-4 col-md-4 col-lg-4">
-                        <div class="card shadow mt-4 mt-sm-0">
-                            <div class="pt-3 m-auto">
-                                <img src="../../../assets/Okok.jpg" width="90" height="90" class="avatar-md circle m-auto" alt="...">
-                            </div>
-                            <div class="card-body text-center pt-0">
-                                <div class="py-2 star-pulse">
-                                    <i class="bi bi-star-fill mx-1 fs-5 text-warning"></i>
-                                    <i class="bi bi-star-fill mx-1 fs-5 text-warning"></i>
-                                    <i class="bi bi-star-fill mx-1 fs-5 text-warning"></i>
-                                    <i class="bi bi-star-fill mx-1 fs-5 text-warning"></i>
-                                    <i class="bi bi-star-fill mx-1 fs-5 text-warning"></i>
-                                </div>
-                                <h5 class="card-title font-weight-bold">Plan Mensual</h5>
-                                <p class="card-text">
-                                    Con el plan mensual usted podrá adquirir un abono que cubra un número específico de viajes que esten estipulados previamente, es decir que ya tengan un origen y un destino establecidos. Es ideal para traslados a obligaciones diarias como trabajo, escuela, etc.
-                                    No dude en consultar!
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-4 col-md-4 col-lg-4">
-                        <div class="card shadow mt-4 mt-sm-0">
-                            <div class="pt-3 m-auto">
-                                <img src="../../../assets/Okok.jpg" width="90" height="90" class="avatar-md circle m-auto" alt="...">
-                            </div>
-                            <div class="card-body text-center pt-0">
-                                <div class="py-2 star-pulse-2">
-                                    <i class="bi bi-star-fill mx-1 fs-5 text-warning"></i>
-                                    <i class="bi bi-star-fill mx-1 fs-5 text-warning"></i>
-                                    <i class="bi bi-star-fill mx-1 fs-5 text-warning"></i>
-                                    <i class="bi bi-star-fill mx-1 fs-5 text-warning"></i>
-                                    <i class="bi bi-star-fill mx-1 fs-5 text-warning"></i>
-                                </div>
-                                <h5 class="card-title font-weight-bold">Plan abono libre</h5>
-                                <p class="card-text">
-                                    Barajando la posibilidad de que necesite hacer viajes durante el mes, pero no sepa la cantidad de viajes que necesitara o si su destino varía según cada viaje le presentamos el abono libre, donde usted podra hacer hasta 30 viajes mensuales sin importar el destino, es decir que los viajes que efectúe serian con kilometros libre.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-4 col-md-4 col-lg-4">
-                        <div class="card shadow mt-4 mt-sm-0">
-                            <div class="pt-3 m-auto">
-                                <img src="../../../assets/Okok.jpg" width="90" height="90" class="avatar-md circle" alt="...">
-                            </div>
-                            <div class="card-body text-center pt-0">
-                                <div class="py-2 star-pulse-3">
-                                    <i class="bi bi-star-fill mx-1 fs-5 text-warning"></i>
-                                    <i class="bi bi-star-fill mx-1 fs-5 text-warning"></i>
-                                    <i class="bi bi-star-fill mx-1 fs-5 text-warning"></i>
-                                    <i class="bi bi-star-fill mx-1 fs-5 text-warning"></i>
-                                    <i class="bi bi-star-fill mx-1 fs-5 text-warning"></i>
-                                </div>
-                                <h5 class="card-title font-weight-bold">Plan encomienda</h5>
-                                <p class="card-text">
-                                    Si lo que necesita es trasladar paquetes o encomiendas durante el transcurso del mes podra acceder a este plan mensual exclusivo para encomiendas donde podra enviar y recibir paquetes sin necesidad de trasladarse, ya que nuestros choferes se encargaran de cuidarlas.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mt-5"  width=100% height=100%>
-                        <a href="#iniciars">
-                            <button type="button" class="btn btn-primary">Comprar ahora</button>
-                        </a>
-                    </div>       
-        
-                </div>
-            </div>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://unpkg.com/primeflex@3.1.2/primeflex.css">
+
+<br>
+<br>
+<br>
+<br>
+<header class="container-fluid">
+    <div class="row flex-nowrap">
+        <div >
+            <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+                <a class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+                  <h1 class="text-center">Bienvenido a su cuenta </h1>
+                </a>
+                <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
+                                    
+                  
+                  
+                  <li class="nav-item">
+                      <i class="bi bi-person-circle"><p>Actualice los datos de su perfil</p>
+                      <button class="login-button btn-primary" [routerLink]="'/perfil'">Actualizar</button>
+                      <a routerLink="'/perfil'"  class="nav-link align-middle px-0"></a>
+                    <br>
+                    <br>
+                    <li class="nav-item">
+                      <i class="bi bi-bag-fill"><p>Ingrese a su carrito de compras</p>
+                        <button class="login-button btn-primary" [routerLink]="'/tiendalog'">Carrito</button>
+                        <a routerLink="'/carrito'"  class="nav-link align-middle px-0"> </a>
+                    <br>
+                    <br>
+                    <li class="nav-item">
+                      <i class="bi bi-emoji-heart-eyes"><p>Pedir un movil</p>
+                        <button class="login-button btn-primary" [routerLink]="'/home'">Movil</button>
+                        <a routerLink="'/carrito'"  class="nav-link align-middle px-0">
+                <hr>
+
+    
+
+        <div class="col py-3">
+           
+
+<router-outlet></router-outlet>
+
+
         </div>
-        <hr>
-    </div>
+
