--- a/RemisYa/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/RemisYa/src/app/pages/admin/dashboard/dashboard.component.html
@@ -36,7 +36,7 @@
               </tr>
             </table>
             <div class = "container text-center">
-            <!---->  <button class="login-button btn-primary" [routerLink]="'/perfil'">Editar</button>
+            <!--  <button class="login-button btn-primary" [routerLink]="'/perfil'">Editar</button>-->
               <a routerLink="'/perfil'"  class="nav-link align-middle px-0"></a>
           </div>
             <mat-action-list>
