--- a/RemisYa/src/app/pages/tiendalog/tienda.component.html
+++ b/RemisYa/src/app/pages/tiendalog/tienda.component.html
@@ -22,6 +22,7 @@
                           <h2 class="text-center"> {{producto.nombre}} </h2>
                           <h3 class="card-title text-center">Precio</h3>
                           <h2 class="card-title text-center">$ {{producto.precio}} </h2>
+                          <ngx-paypal [config]="payPalConfig"></ngx-paypal>
                           <button type="button" class="col-lg-12 col-sm-12 btn btn-success justify-content-center">Comprar</button>
                         </div>
                       </div>
